API fetch for freetips

--- a/app.json
+++ b/app.json
@@ -2,6 +2,17 @@
   "expo": {
     "name": "Rollover betting",
     "slug": "Rolloverbet",
+    "android": {
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-3763838117475589~1933541692"
+      }
+    },
+    "ios": {
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-3763838117475589~2458147699"
+      },
+      "supportsTablet": true
+    },
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
@@ -9,6 +20,7 @@
       "android",
       "web"
     ],
+
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,9 +35,6 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
     "description": ""
   }
 }
