--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/vector-icons": "latest",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-ads-admob": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7",
-    "@expo/vector-icons": "latest"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@react-native-community/eslint-config": "^0.0.6",
+    "@react-native-community/eslint-plugin": "^1.0.0",
     "babel-preset-expo": "~8.0.0",
     "eslint": "^6.8.0"
   },
