--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "latest",
+    "@react-native-community/masked-view": "0.1.5",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-ads-admob": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.2.1",
+    "react-navigation-stack": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
