--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Rollover betting",
+    "name": "Rollover predictions",
     "slug": "Rolloverbet",
     "android": {
       "config": {
@@ -20,7 +20,6 @@
       "android",
       "web"
     ],
-
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
