--- a/app.json
+++ b/app.json
@@ -17,8 +17,7 @@
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -34,6 +33,6 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "description": ""
+    "description": "Sports betting premium and free tips to win lots of money"
   }
 }
