--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^9.0.1",
     "react-navigation": "^4.2.1",
     "react-navigation-stack": "^2.2.1"
   },
