--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@expo/vector-icons": "latest",
     "@react-native-community/masked-view": "0.1.5",
     "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
     "expo": "~36.0.0",
     "expo-ads-admob": "~8.0.0",
+    "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-material-textfield": "^0.16.1",
+    "react-native-paystack": "^3.4.0",
     "react-native-rave": "^2.2.5",
+    "react-native-ravepay": "^2.3.2",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
@@ -33,6 +38,7 @@
     "@react-native-community/eslint-config": "^0.0.6",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "babel-preset-expo": "~8.0.0",
+    "babel-preset-react-native": "2.1.0",
     "eslint": "^6.8.0"
   },
   "private": true
