--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-rave": "^2.2.5",
     "react-native-ravepay": "^2.3.2",
     "react-native-reanimated": "~1.4.0",
+    "react-native-restart": "^0.0.14",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
