--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paystack": "^3.4.0",
+    "react-native-push-notification": "^3.2.1",
     "react-native-rave": "^2.2.5",
     "react-native-ravepay": "^2.3.2",
     "react-native-reanimated": "~1.4.0",
